# abhisheks-video-workbench

./: .env.example  .gitignore  Makefile  README.md  config.py  dashboard.py  modal_upscaler.py  pipeline.py  pyproject.toml  upscale.py
.playwright-mcp/: page-2026-06-09T09-20-39-071Z.yml  page-2026-06-09T09-20-57-380Z.yml  page-2026-06-09T09-21-10-267Z.yml  page-2026-06-09T09-29-30-187Z.yml  page-2026-06-09T09-29-56-331Z.yml  page-2026-06-09T09-30-04-625Z.yml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  api.ts  style.css  types.ts
frontend/src/components/: CapabilityBar.vue  CopyChip.vue  IdleCard.vue  JobHistory.vue  ProgressBar.vue  ResultPanel.vue  TabNav.vue
frontend/src/composables/: useConfig.ts  useJob.ts  useJobs.ts
frontend/src/views/: BrandView.vue  CharactersView.vue  GenerateView.vue  LongFormView.vue  OperateView.vue  UpscaleView.vue
modules/: __init__.py  image_prep.py  logging_setup.py  postprocess.py  sora_client.py  upscale_client.py  utils.py
server/: __init__.py  jobs.py  main.py  schemas.py
