[project]
name = "sora-i2v"
version = "0.1.0"
description = "Standalone image + prompt → video app powered by OpenAI Sora"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    # OpenAI Videos API (Sora) — image-to-video generation. The Videos API
    # lives on recent SDK releases; uv resolves the newest compatible build.
    "openai>=1.50.0",
    # Cover-crop the input image to Sora's exact required resolution.
    "Pillow>=10.0.0",
    # Load OPENAI_API_KEY from .env at runtime.
    "python-dotenv>=1.0.0",
    # Web backend for the Vue frontend (server/) — REST + multipart uploads +
    # SSE job progress, serving the built SPA. python-multipart powers Form/File.
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "modal>=1.5.0",
]
